<?xml version="1.0"?>
<package>

  <name>sdl2_ros</name>
  <version>0.0.0</version>
  <description>SDL2 with ROS</description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>marti_common_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vimjay</run_depend>

  <export>

  </export>

</package>
